[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/entities/mole_controller.gd" type="Script" id=1]
[ext_resource path="res://assets/texture/icon.png" type="Texture" id=2]
[ext_resource path="res://src/entities/air.gd" type="Script" id=3]
[ext_resource path="res://src/entities/mole.gd" type="Script" id=4]
[ext_resource path="res://src/util/state_machine/state_machine.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/entities/walk.gd" type="Script" id=6]
[ext_resource path="res://src/entities/attack.gd" type="Script" id=7]
[ext_resource path="res://src/entities/idle.gd" type="Script" id=8]
[ext_resource path="res://src/entities/dead.gd" type="Script" id=9]
[ext_resource path="res://src/entities/hurt.gd" type="Script" id=10]
[ext_resource path="res://src/entities/controller.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=2]
resource_name = "air"

[sub_resource type="Animation" id=3]
resource_name = "attack"

[sub_resource type="Animation" id=4]
resource_name = "dead"

[sub_resource type="Animation" id=5]
resource_name = "hurt"

[sub_resource type="Animation" id=6]
resource_name = "idle"

[sub_resource type="Animation" id=7]
resource_name = "walk"

[node name="mole" type="KinematicBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ladder_detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladder_detector"]
shape = SubResource( 1 )

[node name="input_state" type="Node" parent="."]
script = ExtResource( 1 )

[node name="state_machine" parent="." instance=ExtResource( 5 )]
start_state = "idle"

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource( 8 )

[node name="walk" type="Node" parent="state_machine"]
script = ExtResource( 6 )

[node name="air" type="Node" parent="state_machine"]
script = ExtResource( 3 )

[node name="attack" type="Node" parent="state_machine"]
script = ExtResource( 7 )

[node name="hurt" type="Node" parent="state_machine"]
script = ExtResource( 10 )

[node name="dead" type="Node" parent="state_machine"]
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/air = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/dead = SubResource( 4 )
anims/hurt = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="pivot" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="pivot"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 8, 0, 8, 8 )

[node name="controller" type="Node" parent="."]
script = ExtResource( 11 )
